# daisy-synth

./: Cargo.toml  README.md  openocd.cfg
daisy-synth/: Cargo.toml  LICENSE  busblaster.cfg  flash.sh  memory.x  openocd.cfg
daisy-synth/src/: gpio.rs  main.rs  system.rs
dsptest/: Cargo.toml
dsptest/src/: main.rs  synthmessage.rs  synthui.rs
libdsp/: Cargo.toml
libdsp/src/: lib.rs  oscillators.rs  traits.rs
src/: main.rs
src/synth/: mod.rs  oscillators.rs  traits.rs
