[package]
name = "daisy-synth"
authors = ["Andy Best <andybest.net@gmail.com>"]
edition = "2018"
version = "0.0.1"

[dependencies]
panic-halt = "0.2.0"
cortex-m = "0.6.4"
cortex-m-rt = { version = "0.6.13", features = ["device"] }
daisy_bsp = { version = "0.4.1", features = ["seed"]  }
micromath = "1.1.1"

[features]
default = ["sample_f32"]
sample_f32 = []
sample_f64 = []