[package]
name = "daisy-synth"
authors = ["Andy Best <andybest.net@gmail.com>"]
edition = "2018"
version = "0.0.1"
default-target = "thumbv7em-none-eabihf"

[dependencies]
panic-halt = "0.2.0"
panic-semihosting = { version = "0.5.6" }
cortex-m = "0.6.4"
cortex-m-rt = { version = "0.6.13", features = ["device"] }
daisy_bsp = { version = "0.4.1", features = ["seed", "alloc"]  }
libdsp = { path = "../libdsp", features = ["sample_f32"] }